--- a/src/app/components/LembretesList.module.css
+++ b/src/app/components/LembretesList.module.css
@@ -1,28 +1,53 @@
-
+.list-title-container {
+  border: 1px solid #e4e4e4;
+  border-radius: 15px;
+  margin: 1rem 0;
+  padding: 1rem;
+  color: #fafafa;
+  background-color: #00A9FF;
+}
 .list-container {
     margin: 5% 0;
     text-align: center;
+    
   }
   
   .list-header {
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    border: 1px solid #fafafa;
+    border-radius: 10px;
+    margin: 1rem 0;
+    padding: 4px 4px;
+    background-color: #190482;
   }
-  
+  .date-box{
+    border: 1px solid #fafafa;
+    border-radius: 10px;
+    margin: 1rem;
+    background-color: #3876BF;
+  }
   .date-header {
     font-size: 1.2rem;
-    color: #007bff;
+    color: #fafafa;
+    
   }
   
   .item {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0.5rem 0;
+    padding: 5px 5px;
+    margin-right: 1rem;
+    margin-bottom: 0.5rem;
+    border: 1px solid #fafafa;
+    border-radius: 10px;
+    color: #190482;
+    background-color: #C2D9FF;
   }
   
   .remove-button {
-    background-color: #ff0000;
+    background-color: #192655;
     border: none;
     border-radius: 50%;
     width: 1.5rem;
