--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,5 +5,6 @@
   justify-content: center;
   min-height: 100vh;
   background-image: url('../../public/wallpaper-azul.jpg');
+  height: 100%;
 }
   
